Terminado, falta postman

--- a/quotemind-frontend/src/app/catalogo/catalogo.component.html
+++ b/quotemind-frontend/src/app/catalogo/catalogo.component.html
@@ -19,8 +19,8 @@
         
         <ul class="inline-flex lg:flex items-center justify-start gap-6 md:gap-8 py-3 ">
           <li><a routerLink="/" class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white">Home</a></li>
-          <li><a routerLink="/crud" class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white">CRUD</a></li>
-          <li><a routerLink="/catalogo" class="text-sm font-medium border-b-2 text-gray-900 hover:text-primary-700 dark:text-white">Catalogo</a></li>
+          <li><a routerLink="/crud" class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white">Mis Libros</a></li>
+          <li><a routerLink="/catalogo" class="text-sm font-medium border-b-2 text-gray-900 hover:text-primary-700 dark:text-white">Recomendaciones</a></li>
         </ul>
       </div>
 
